[package]
name = "codesign-verify"
version = "0.1.2"
description = "Bindings to the OS utilites for code signature validation."
authors = ["Vlad Krasnov <vlad@cloudflare.com>"]
edition = "2018"
license = "BSD-3-Clause"
repository = "https://github.com/vkrasnov/codesign-verify-rs"
keywords = ["macos", "windows", "code", "signature", "authenticode"]

[dependencies]
rust-crypto = { version = "0.2", default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [ "std",
                                         "handleapi",
                                         "processenv",
                                         "processthreadsapi",
                                         "softpub",
                                         "tlhelp32",
                                         "winbase",
                                         "winerror",
                                         "winnt",
                                         "wincrypt",
                                         "wintrust",
                                         "impl-default" ] }

[package.metadata.docs.rs]
default-target = "x86_64-apple-darwin"
