[package]
name = "codesign-verify"
version = "0.1.2"
description = "Bindings to the OS utilites for code signature validation."
authors = ["Vlad Krasnov <vlad@cloudflare.com>"]
edition = "2018"
license = "BSD-3-Clause"
repository = "https://github.com/vkrasnov/codesign-verify-rs"
keywords = ["macos", "windows", "code", "signature", "authenticode"]

[dependencies]
sha2 = "0.9"
sha-1 = "0.9.4"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.48.0", features = [
                                        "Win32_Foundation",
                                        "Win32_Storage_FileSystem",
                                        "Win32_System_Threading",
                                        "Win32_Security",
                                        "Win32_Security_WinTrust",
                                        "Win32_Security_Cryptography",
                                        "Win32_Security_Cryptography_Catalog"
                                    ] }

[package.metadata.docs.rs]
default-target = "x86_64-apple-darwin"
